update default apge

--- a/cs4550/default/index.html
+++ b/cs4550/default/index.html
@@ -4,5 +4,7 @@
   </head>
   <body>
   	<a href="http://hw01.ssaleem.me">hw01.ssaleem.me</a>
+  	<br>
+  	<a href="http://hw01.ssaleem.me">hw02.ssaleem.me</a>
   </body>
 </html>
