--- a/cs4550/hw02/post-index.html
+++ b/cs4550/hw02/post-index.html
@@ -36,6 +36,9 @@
                </div>
                <div class="comments-list">
                   <div class="media">
+                     <input type="submit" value="Create a new post" class="btn btn-primary" />
+                  </div>
+                  <div class="media">
                      <p class="pull-right"><small>Posted 5 days ago</small></p>
                      <a class="media-left" href="#">
                      <img width="40" height="40" alt="" src="http://static1.businessinsider.com/image/589dbb873149a101788b4c85-480/young-woman-outside-thinking-looking-at-camera.jpg">
